--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<header class ='major'>
 							<h2><strong>About me</strong></h2>
 						</header>
-						<p style="text-indent: 10px;">My name is James Parsaie, and I am a computer science major at the University of Wisconsin - Madison (GPA: 3.64) and a member of the Honors College.
+						<p style="text-indent: 10px;">My name is James Parsaie, and I am a Computer Science major at the University of Wisconsin - Madison (GPA: 3.64) and a member of the Honors College.
 							I have a passion for areas such as backend development, fullstack development, and data science. <u>I am searching for a Software
 							Engineering Internship position for the summer of 2022.</u></p>
 						</section>
