Updated texts | Fixed Mobile problem
Updated texts to be more eye catching

Fixed spacing for mobile view

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							<header class='major'>
 								<h2><strong>My Skills</strong></h2>
 							</header>
-							<div style="display: inline-block; padding-right: 150px;">
-								<h3>Coding Languages</h3>
+							<div style="display: inline-block; padding-right: 150px; padding-left: 10px;">
+								<h3><u>Coding Languages</u></h3>
 								<ul style="display: inline-block;">
 									<li>Java (Proficient)</li>
 									<li>Python </li>
@@ -49,7 +49,7 @@
 							</div>
 							<span style="width: 100px;"></span>
 							<div style="display: inline-block; height: 100%;">
-								<h3>Frameworks/Tools</h3>
+								<h3><u>Frameworks/Tools</u></h3>
 								<ul style="display: inline-block;">
 									<li>Source Control (Git)</li>
 									<li>Experience with Framework testing</li>
@@ -87,16 +87,16 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Work</h2>  
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/personal/newExample.png" class="image fit thumb"><img src="images/personal/landing.png" alt="" /></a>
-								<h3>Kivy - Password Generator</h3>
+								<h3><u>Kivy - Password Generator</u></h3>
 								<p>Application created using Kivy, KivyMD, Keyring and Python to create a password generator, and allowed for local user functionality and storing passwords</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/personal/calc.png" class="image fit thumb"><img src="images/personal/calcmain.jpg" alt="" /></a>
-								<h3>Kivy - Calculator</h3>
+								<h3><u>Kivy - Calculator</u></h3>
 								<p>Developed a fully functioning calculator using Kivy and Python and utilizing python libraries to make computations. Used this project as oppertunity to familairize
 									myself with both python and Kivy
 								</p>
@@ -120,7 +120,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Contact Me</h2>
-						<p>I am currently on the search for an internship for Summer of 2022 <br> Please reach out to me via email if you have any questions!</p>  
+						<p>I am currently on the search for an internship for <b>Summer of 2022</b> <br> Please reach out to me via email if you have any questions!</p>  
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
