Updated Framework List
Changed around the skills

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<h3><u>Frameworks/Tools</u></h3>
 								<ul style="display: inline-block;">
 									<li>Source Control (Git)</li>
-									<li>Experience with Framework testing</li>
-									<li>Visual Studio Code</li>
+									<li>Valgrind & GDB</li>
+									<li>Framework Testing</li>
 									<li>API Usage</li>
 									<li>Python Libraries (Ex. Kivy, KivyMD, etc.)</li>
 									<li>Java Libraries (Ex. Junit, etc.)</li>
