--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 						<header class="major">
 							<h2><strong>Work Experience</strong><br /></h2>
 						</header>
-						<h2><u>Sports Program Supervisor || University of Wisconsin   (2021-Current)</u></h2>
+						<h2><u>Sports Program Supervisor || University of Wisconsin </u> <br> (2021-Current)</h2>
 							<p style="text-indent: 30px;">Worked directly with the Assistant Director and Coordinators of Sports Programs in the on-site 
 								administration of programming while serving as an ambassador for the department of Recreation and Wellbeing. Maintained a professional relationship with both senior staff members and students and helped to facilitate and overlook sports programs all throughout campus.</p>
-						<h2><u>Supervisor of Boathouse Operations || Weekapaug Inn    (2019-2021, Seasonal)</u></h2>
+						<h2><u>Supervisor of Boathouse Operations || Weekapaug Inn </u>  <br> (2019-2021, Seasonal)</h2>
 							<p style="text-indent: 30px;">Seasonal assistant to the Resident Naturalist & Director of Recreation for this Forbes 4-star, Relais & Chateaux property. Responsible for overseeing boathouse operations to impeccable standards & maintaining a fleet of Rhode Island boats & rental crafts, including Beetle Cat Sailboat, Sunfish Sailboat, 
 								Hobie Cat Wave Sailboat, Rowboats, Pedal boats, Canoes, Hobie Mirage Eclipse Paddle Boards, and single, tandem & sit-on-top kayaks. Delivered & supported nature programs & outdoor activities to help guests explore the local wildlife and habitat of the Quonochontaug salt pond. From crabbing to crafts, rockets to yard games, my job was to ensure a fun, safe, educational & highly memorable experience for all our guests.</p>
 					</section>
