--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<img src="images/personal/me.jpg" alt="" style="border-radius: 20%;" width ='200'height='200'/></a>
-					<h1><strong>I am James Parsaie</strong>, a Sophomore<br />
+					<h1><strong>I am James Parsaie</strong>, a Junior<br />
 					studying computer science at the <br />
 					University of Wisconsin - Madison
 				</div>
@@ -28,9 +28,9 @@
 						<header class ='major'>
 							<h2><strong>About me</strong></h2>
 						</header>
-						<p style="text-indent: 10px;">My name is James Parsaie, and I am a Computer Science major at the University of Wisconsin - Madison (GPA: 3.64) and a member of the Honors College.
+						<p style="text-indent: 10px;">My name is James Parsaie, and I am a Computer Science major at the University of Wisconsin - Madison (GPA: 3.5) and a member of the Honors College.
 							I have a passion for areas such as backend development, fullstack development, and data science. <u>I am searching for a Software
-							Engineering Internship position for the summer of 2022.</u></p>
+							Engineering Internship position for the summer of 2023.</u></p>
 						</section>
 						<section style='white-space: nowrap; overflow-x: auto; height: 100%; width: 100%;'>
 							<header class='major'>
@@ -52,11 +52,10 @@
 								<h3><u>Frameworks/Tools</u></h3>
 								<ul style="display: inline-block;">
 									<li>Source Control (Git)</li>
-									<li>Valgrind & GDB</li>
-									<li>Framework Testing</li>
-									<li>API Usage</li>
+									<li>API Development</li>
+									<li>AWS (Dynamo, SQS, Lambda, etc.)</li>
 									<li>Python Libraries (Ex. Kivy, KivyMD, etc.)</li>
-									<li>Java Libraries (Ex. Junit, etc.)</li>
+									<li>DevOp & Agile Practices</li>
 								</ul>
 							</div>
 						</section>
@@ -77,7 +76,11 @@
 						<header class="major">
 							<h2><strong>Work Experience</strong><br /></h2>
 						</header>
-						<h2><u>Sports Program Supervisor || University of Wisconsin </u> <br> (2021-Current)</h2>
+						<h2><u>Software Engineer Intern || EatStreet</u> <br> (2022-Current)</h2>
+							<p style="text-indent: 30px;">At EatStreet I have served on multiple project life cycles and delivered my code in a timely and complete manner, that was praised for its efficiency and help to the company. Through my experiences I am have been able
+								to perform Backend and API development, as well as get experience working on frontend work via AngularJS. In the process of this I have been exposed and become very familiar with AWS via DynanmoDB, SQS, ECS, Lambda, and others. As of right now
+								I have taken on the role of lead for a new project in which I am leading one other intern on research and development. Through working at this internship additionally I have gained knowledge of the Agile and DevOps typical flow through team meetings, standups, etc.</p>
+						<h2><u>Sports Program Supervisor || University of Wisconsin </u> <br> (2021-2022)</h2>
 							<p style="text-indent: 30px;">Worked directly with the Assistant Director and Coordinators of Sports Programs in the on-site 
 								administration of programming while serving as an ambassador for the department of Recreation and Wellbeing. Maintained a professional relationship with both senior staff members and students and helped to facilitate and overlook sports programs all throughout campus.</p>
 						<h2><u>Supervisor of Boathouse Operations || Weekapaug Inn </u>  <br> (2019-2021, Seasonal)</h2>
@@ -87,8 +90,18 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>  
+						<h2><b><u>Recent Work</u></b></h2>  
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/personal/bird.png" class="image fit thumb"><img src="images/personal/bird.png" alt="" /></a>
+								<h3><u>Unity - Bird Scroller</u></h3>
+								<p>2D scroller created within Unity game engine leveraging AWS for backend support</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/personal/checker.png" class="image fit thumb"><img src="images/personal/checker.png" alt="" /></a>
+								<h3><u>Unity - Checkers</u></h3>
+								<p>3D Game developed in Unity for checkers, done in order to get more familiar with Unity environment and development</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/personal/newExample.png" class="image fit thumb"><img src="images/personal/landing.png" alt="" /></a>
 								<h3><u>Kivy - Password Generator</u></h3>
@@ -100,7 +113,8 @@
 								<p>Developed a fully functioning calculator using Kivy and Python and utilizing python libraries to make computations. Used this project as oppertunity to familairize
 									myself with both python and Kivy
 								</p>
-							<!--</article>
+							</article>
+							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
@@ -120,7 +134,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Contact Me</h2>
-						<p>I am currently on the search for an internship for <b>Summer of 2022</b> <br> Please reach out to me via email if you have any questions!</p>  
+						<p>I am currently on the search for an internship for <b>Summer of 2023</b> <br> Please reach out to me via email if you have any questions!</p>  
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
